--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,9 @@
 <div class="sidebar">
   <div class="container">
     <div class="sidebar-about">
+      <div class="head-shot-container">
+        <img src="/assets/images/rory_headshot.jpg" alt="Portrait photo of Rory" />
+      </div>
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
