Fixes sidebar display on smaller screens

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
         href="/experience">Experience</a>
       <a class="sidebar-nav-item{% if page.url == '/projects.html' %} active{% endif %}" href="/projects">Projects</a>
     </nav>
-    <nav class="sidebar-nav sidebar-sticky">
+    <nav class="sidebar-nav sidebar-bottom">
       <a class="sidebar-nav-item" href="{{ site.linkedin_url }}">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin"
           viewBox="0 0 16 16">
