--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 
+<div class="page center">
+  <h1 class="page-title">{{ page.title }}</h1>
+  {{ content }}
+</div>
+
 <div class="posts">
   {% for post in paginator.posts %}
   <div class="post">
@@ -18,6 +23,7 @@ layout: default
   {% endfor %}
 </div>
 
+{% if paginator.posts %}
 <div class="pagination">
   {% if paginator.next_page %}
   <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
@@ -34,3 +40,4 @@ layout: default
   <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
+{% endif %}
