--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,29 +1,31 @@
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
 
   <!-- Enable responsiveness on mobile devices-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>
-    {% if page.title == "Home" %}
-    {{ site.title }}
-    {% else %}
-    {{ page.title }} &middot; {{ site.title }}
-    {% endif %}
+    {% if page.title == "Home" %} {{ site.title }} {% else %} {{ page.title }} | {{ site.title }} {%
+    endif %}
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/style.css">
+  <link
+    rel="stylesheet"
+    href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"
+  />
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/style.css" />
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144"
-    href="{{ site.baseurl }}assets/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}assets/favicon.ico">
+  <link
+    rel="apple-touch-icon-precomposed"
+    sizes="144x144"
+    href="{{ site.baseurl }}assets/apple-touch-icon-144-precomposed.png"
+  />
+  <link rel="shortcut icon" href="{{ site.baseurl }}assets/favicon.ico" />
 
-  {% feed_meta %}
-  {% seo %}
+  {% feed_meta %} {% seo %}
 </head>
