--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<div class="page center">
-  <h1 class="page-title">{{ page.title }}</h1>
+<div class="page">
+  <h1 class="page-title center">{{ page.title }}</h1>
   {{ content }}
 </div>
 
@@ -11,9 +11,7 @@ layout: default
   {% for post in paginator.posts %}
   <div class="post">
     <h1 class="post-title">
-      <a href="{{ post.url }}">
-        {{ post.title }}
-      </a>
+      <a href="{{ post.url }}"> {{ post.title }} </a>
     </h1>
 
     <span class="post-date">{{ post.date | date_to_string }}</span>
@@ -29,14 +27,13 @@ layout: default
   <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
   {% else %}
   <span class="pagination-item older">Older</span>
-  {% endif %}
-  {% if paginator.previous_page %}
-  {% if paginator.page == 2 %}
+  {% endif %} {% if paginator.previous_page %} {% if paginator.page == 2 %}
   <a class="pagination-item newer" href="{{ site.baseurl }}">Newer</a>
   {% else %}
-  <a class="pagination-item newer" href="{{ site.baseurl }}page{{paginator.previous_page}}">Newer</a>
-  {% endif %}
-  {% else %}
+  <a class="pagination-item newer" href="{{ site.baseurl }}page{{paginator.previous_page}}"
+    >Newer</a
+  >
+  {% endif %} {% else %}
   <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
