Initial updates for posts

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,6 +21,7 @@
         href="/projects"
         >Projects</a
       >
+      <a class="sidebar-nav-item{% if page.url == '/blog.html' %} active{% endif %}" href="/blog">Blog</a>
     </nav>
     <nav class="sidebar-nav sidebar-bottom">
       <a class="sidebar-nav-item" href="{{ site.linkedin_url }}">
