--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,11 @@
   text-decoration: none;
   cursor: pointer;
 }
+
+.post {
+  margin-bottom: 1rem;
+}
+
+.post-date {
+  margin-bottom: 0.5rem;
+}
