--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,18 +14,18 @@
     rel="stylesheet"
     href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"
   />
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/poole.css" />
+  <link rel="stylesheet" href="/assets/css/syntax.css" />
+  <link rel="stylesheet" href="/assets/css/hyde.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
 
   <!-- Icons -->
-  <link
+  <!-- <link
     rel="apple-touch-icon-precomposed"
     sizes="144x144"
-    href="{{ site.baseurl }}assets/apple-touch-icon-144-precomposed.png"
+    href="/assets/apple-touch-icon-144-precomposed.png"
   />
-  <link rel="shortcut icon" href="{{ site.baseurl }}assets/favicon.ico" />
+  <link rel="shortcut icon" href="/assets/favicon.ico" /> -->
 
   {% feed_meta %} {% seo %}
 </head>
