Updates theme colours

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
-/* Only show the profile photo in the sidebar on larger devices */
+/* Theme overrides */
+
+body {
+  color: #222222;
+}
+
 .head-shot-container {
   display: none;
 }
