--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface"
   />
   <link rel="stylesheet" href="/assets/css/poole.css" />
-  <link rel="stylesheet" href="/assets/css/syntax.css" />
+  <link rel="stylesheet" href="/assets/css/monokai-syntax.css" />
   <link rel="stylesheet" href="/assets/css/hyde.css" />
   <link rel="stylesheet" href="/assets/css/style.css" />
 
