--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,10 @@ layout: default
 ---
 
 <div class="page">
-  <h1 class="page-title center">{{ page.title }}</h1>
+  <div class="center">
+    <div class="head-shot-container">
+      <img src="/assets/images/rory_headshot.jpg" alt="Portrait photo of Rory" />
+    </div>
+  </div>
   {{ content }}
 </div>
