--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@ body {
 }
 
 .head-shot-container {
-  display: none;
+  max-height: 16rem;
 }
-@media (min-width: 48em) and (min-height: 48em) {
-  .head-shot-container {
-    display: inherit;
-  }
+
+.head-shot-container img {
+  max-height: 16rem;
+  margin: 0 auto 2rem auto;
 }
 
 .sidebar {
@@ -58,7 +58,7 @@ body {
 /* Table of contents */
 
 .table-of-contents a {
-  color: #515151;
+  color: #222222;
 }
 
 @media (min-width: 100em) {
