Updates position of table of contents on wider screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,9 +65,8 @@ body {
   .table-of-contents {
     position: fixed;
     top: 0;
-    right: 0;
+    left: 64rem;
     bottom: 0;
-    width: 18rem;
     text-align: left;
     margin-top: 4rem;
   }
